# MaaFramework

./: .clang-format  .gitmodules  CMakeLists.txt
include/MaaFramework/: MaaDef.h  MaaPort.h
include/MaaFramework/Instance/: MaaController.h
include/MaaToolkit/: MaaToolkitAPI.h
include/MaaToolkit/Window/: MaaToolkitWindow.h
sample/cpp/: CMakeLists.txt
sample/python/: demo1.py
source/: CMakeLists.txt
source/LibraryHolder/ControlUnit/: ControlUnit.cpp
source/MaaFramework/API/: MaaController.cpp
source/MaaHttp/: interface.json
source/MaaHttp/source/spec/: call.hpp  type.hpp
source/MaaMacControlUnit/API/: MacControlUnitAPI.mm
source/MaaMacControlUnit/Input/: EventInput.h  EventInput.mm
source/MaaMacControlUnit/Manager/: ControlUnitMgr.h  ControlUnitMgr.mm
source/MaaMacControlUnit/Screencap/: CGScreencap.h  CGScreencap.mm
source/MaaQuickJS/: CMakeLists.txt  test.cpp
source/MaaQuickJS/impl/: Context.cpp  Runtime.cpp  Value.cpp
source/MaaQuickJS/include/QuickJS/: Context.h  Define.h  Runtime.h  Value.h
source/MaaQuickJS/source/: Context.cpp  Runtime.cpp  Value.cpp
source/MaaToolkit/: CMakeLists.txt
source/MaaToolkit/API/: MaaToolkitWindow.cpp
source/MaaToolkit/Window/: WindowAPI.h  WindowFinder.h  WindowFinder_Mac.mm  WindowFinder_NotImpl.cpp  WindowFinder_Universe.cpp  WindowFinder_Win32.cpp
source/MaaUtils/Codec/: Codec.cpp
source/binding/NodeJS/src/: agent.cpp
source/binding/Python/maa/: controller.py  define.py
source/include/Conf/: Conf.h
source/include/ControlUnit/: MacControlUnitAPI.h
source/include/LibraryHolder/: ControlUnit.h
source/include/MaaAgent/: Message.hpp
source/include/QuickJS/: QuickJS.h
source/module/: CMakeLists.txt
source/module/MaaUtils/: CMakeLists.txt
source/module/MaaUtils/IOStream/: ChildPipeIOStream.cppm  IOStream.cppm  SockIOStream.cppm
source/module/MaaUtils/Logger/: Logger.cppm  LoggerUtils.cpp  LoggerUtils.cppm
source/module/MaaUtils/Misc/: Codec.cppm  File.cppm  ImageIo.cppm  NonCopyable.cppm  Runtime.cppm  Runtime_Posix.cpp  Runtime_Win.cpp  ScopeLeave.cppm  SingletonHolder.cppm  Uuid.cppm
source/module/MaaUtils/Platform/: Platform.cppm  PlatformLinux.cpp  PlatformMacOS.cpp  PlatformPosix.cpp  PlatformWin32.cpp
test/dlopen/: main.cpp
test/dummy/: main.cpp
(+5 files in other folders)
